# mpax-rs

./: .gitignore  Cargo.toml
.github/workflows/: test.yml
libmpax/: Cargo.toml
libmpax/src/: api.rs  dto.rs  lib.rs  single_app.rs
mpaxctl/: Cargo.toml
mpaxctl/src/: client.rs  config.rs  main.rs  url.rs
mpaxctl/src/cmd/: mod.rs  pause.rs  play.rs
mpaxd/: Cargo.toml
mpaxd/i18n/: en.json  zh-CN.json
mpaxd/src/: config.rs  main.rs  music.rs  player.rs  playlist.rs  server.rs
mpaxd/src/metadata/: mod.rs
