[workspace]
members = ["libmpax", "mpaxctl", "mpaxd"]

[workspace.dependencies]
anyhow = { version = "1.0.79" }
clap = { version = "4.4.18" }
env_logger = { version = "0.11.1" }
interprocess = { version = "1.2.1" }
log = { version = "0.4.20" }
racros = { version = "0.1.0" }
rust-i18n = { version = "3.0.1" }

workspace.resolver = "2"

