[package]
name = "libmpax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
interprocess = { workspace = true }
racros = { workspace = true }
rust-i18n = { workspace = true }
