[package]
name = "mpaxctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dbus = "0.9.7"
env_logger = { workspace = true }
libmpax = { path = "../libmpax" }
log = { workspace = true }
racros = { workspace = true }
reqwest = "0.12.4"
rust-i18n = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
