[package]
name = "mpaxd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
libmpax = { path = "../libmpax" }
racros = { workspace = true }
rodio = "0.17.3"
rust-i18n = { workspace = true }
tokio = { version = "1.36.0", features = ["io-std", "rt", "rt-multi-thread", "macros"] }
