[package]
name = "mpaxd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
futures = { version = "0.3.30" }
libmpax = { path = "../libmpax" }
log = { workspace = true }
racros = { workspace = true }
rodio = "0.19.0"
rust-i18n = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.40.0", features = ["io-std", "rt", "rt-multi-thread", "macros", "time"] }
